# QPickit

./: CMakeLists.txt  QPickit2.desktop  mainwindow.cpp
